vertx-scala-kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: vertx-demo
spec:
  rules:
  - http:
     paths:
     - path: /
       backend:
         serviceName: vertx-scala-demo
         servicePort: 8666
